[package]
name = "leetcode-rust"
version = "0.1.0"
authors = ["alei <rayingecho@gmail.com>"]
edition = "2018"

[dependencies]
tokio = {version = "1.26", features = ["full"]}
reqwest = { version = "0.11.10", features = ["json"]}
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
rand = "0.8.4"
regex = "1.3.4"
futures = { version = "0.3.19", features = ["thread-pool"] }
surf = "2.0.3"

[lib]
doctest = false
test = true
